--- a/.azure/mirror.yml
+++ b/.azure/mirror.yml
@@ -33,7 +33,7 @@ steps:
     azureSubscription: 'Azure DevOps'
     scriptType: bash
     scriptLocation: 'scriptPath' 
-    scriptPath: "$(System.DefaultWorkingDirectory)/.azure/import.sh" 
+    scriptPath: "$(System.DefaultWorkingDirectory)/.azure/scripts/import.sh" 
 # - task: Bash@3
 #   name: 'Bash'
 #   inputs:
