--- a/.azure/update.yml
+++ b/.azure/update.yml
@@ -58,7 +58,7 @@ steps:
   displayName: 'Update Mirror'
   inputs:
     targetType: 'filePath'
-    filePath: "$(System.DefaultWorkingDirectory)/.azure/update.sh"
+    filePath: "$(System.DefaultWorkingDirectory)/.azure/scripts/update.sh"
     failOnStderr: true
     workingDirectory: "$(System.DefaultWorkingDirectory)"
   env:
