--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,36 @@
 [core]
+	repositoryformatversion = 0
+  filemode = false
+  bare = false
+  symlinks = false
+	logallrefupdates = true
+	ignorecase = true
+	precomposeunicode = true
+  hideDotFiles = dotGitOnly
+[remote "origin"]
+	url = git@github.com:shortpoet/sp.git
+	fetch = +refs/heads/*:refs/remotes/origin/*
     repositoryformatversion = 0
     filemode = false
     bare = true
     symlinks = false
     ignorecase = true
     hideDotFiles = dotGitOnly
-[remote "sp"]
-    url = git@github.com:shortpoet/sp.git
-    fetch = +refs/heads/*:refs/heads/*
-    fetch = +refs/tags/*:refs/tags/*
-    mirror = true
-[remote "mirrors"]
-    url = git@ssh.dev.azure.com:v3/shortpoet/Shortpoet/Shortpoet
+    url = git@ssh.dev.azure.com:v3/shortpoet/Shortpoet/sp
     mirror = true
     skipDefaultUpdate = true
+[branch "main"]
+	remote = origin
+	merge = refs/heads/main
+[branch "develop"]
+	remote = origin
+	merge = refs/heads/develop
+[branch "uat"]
+	remote = origin
+	merge = refs/heads/uat
+[branch "feature-upgrades"]
+	remote = origin
+	merge = refs/heads/feature-upgrades
+[branch "FREEZE-pre-ssg"]
+	remote = origin
+	merge = refs/heads/FREEZE-pre-ssg
