--- a/.github/workflows/infra-base.yml
+++ b/.github/workflows/infra-base.yml
@@ -147,7 +147,7 @@ jobs:
       base_path: .iac/infra_base/aws
       infra_type: Base
       provider: aws
-      org: shortpoet-cloud
+      module_org: shortpoet-cloud
       # build_path: "workers/dist"
       # build_artifact: "dist"
       # build_artifact_uuid: ${{ needs.build-node.outputs.build-artifact-uuid }}
