--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -138,7 +138,8 @@ jobs:
           path: "${{ env.APP_DIR }}/${{ env.BUILD_DIR }}/${{ env.BUILD_ARTIFACT }}.zip"
 
   deploy:
-    uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
+    uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@develop
+    # uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
     secrets: inherit
     needs: [paths-filter, build-node]
     # can't seem to use if release here because of needs
