--- a/app/package.json
+++ b/app/package.json
@@ -22,88 +22,85 @@
     "up": "taze major -I"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@trainiac/html2canvas": "^1.0.0",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.13.0",
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
-    "chalk": "^5.2.0",
-    "core-js": "^3.30.2",
-    "css-loader": "^6.8.1",
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
+    "chalk": "^5.6.2",
+    "core-js": "^3.45.1",
+    "css-loader": "^6.11.0",
     "devicons": "^1.8.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "fontfaceobserver": "^2.3.0",
     "fs": "0.0.1-security",
-    "google-fonts-plugin": "^5.0.2",
     "html2canvas": "^1.4.1",
-    "jest": "^29.5.0",
-    "jquery": "^3.7.0",
+    "jest": "^30.1.3",
+    "jquery": "^3.7.1",
     "jquery.easing": "^1.4.1",
     "js-yaml": "^4.1.0",
-    "jsdom": "^21.1.2",
-    "jspdf": "^2.5.1",
+    "jsdom": "^26.1.0",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
-    "markdown-it": "^13.0.1",
-    "moment": "^2.29.4",
+    "markdown-it": "^13.0.2",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "portal-vue": "^3.0.0",
-    "postcss": "^8.4.24",
-    "postcss-preset-env": "^8.4.1",
-    "vite": "^4.3.9",
-    "vite-plugin-md": "^0.22.5",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.14.5",
-    "vue-loader": "^17.1.2",
-    "vue-router": "^4.2.2",
+    "postcss": "^8.5.6",
+    "postcss-preset-env": "^8.5.1",
+    "vite": "^4.5.14",
+    "vite-plugin-md": "^0.21.5",
+    "vue": "^3.5.21",
+    "vue-i18n": "^11.1.12",
+    "vue-loader": "^17.4.2",
+    "vue-router": "^4.5.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^5.0.0",
-    "@rushstack/eslint-patch": "^1.3.0",
-    "@types/bootstrap": "^5.2.6",
-    "@types/jest": "^29.5.1",
-    "@types/jquery": "^3.5.16",
-    "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/node": "^18.16.16",
-    "@types/nprogress": "^0.2.0",
+    "@intlify/unplugin-vue-i18n": "^11.0.0",
+    "@rushstack/eslint-patch": "^1.12.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/jest": "^29.5.14",
+    "@types/jquery": "^3.5.33",
+    "@types/markdown-it-link-attributes": "^3.0.5",
+    "@types/node": "^18.19.124",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue-macros/volar": "^0.5.15",
     "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.3.2",
-    "@vueuse/head": "^1.1.26",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vueuse/head": "^1.3.1",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.41.0",
-    "eslint-plugin-vue": "^9.14.1",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
     "file-loader": "^6.2.0",
-    "jest-canvas-mock": "^2.5.1",
+    "jest-canvas-mock": "^2.5.2",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.8.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.1",
-    "typescript": "~4.7.4",
+    "sass": "^1.92.1",
+    "sass-loader": "^13.3.3",
+    "typescript": "^5.9.2",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
     "vite-plugin-pages": "^0.28.0",
-    "vite-plugin-vue-component-preview": "^1.1.6",
-    "vite-plugin-vue-inspector": "^3.4.2",
+    "vite-plugin-vue-inspector": "^3.7.2",
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.29.8",
     "vue-markdown-loader": "^2.5.0",
-    "vue-template-compiler": "^2.7.14",
-    "vue-tsc": "^1.6.5"
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^3.0.6"
   }
 }
